<resources>
    <string name="app_name">WeDoKart</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="register_now">Register Now</string>
    <string name="logout">LOGOUT</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="loading_details">Loading Details......</string>
</resources>